# article-scraper

./: Cargo.toml  README.md  deny.toml  justfile  lefthook.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
scripts/: check-chinese.sh
scripts/csa/: cumulative-review-batch.sh  latest-pass-review-head.sh
scripts/hooks/: check-path-included-src.sh  post-pr-create-check.sh  post-pr-create.sh  pre-merge-guard.sh  pre-push  version-check.sh
scripts/tests/: cumulative-review-batch-tests.sh  latest-pass-review-head-tests.sh
