[workspace]
members = [
    "crates/cli",
    "crates/config",
    "crates/core"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify = "6.1.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { path = "crates/config" }
core_lib = { path = "crates/core" }
