[package]
license = "MIT OR Apache-2.0"
name = "article-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
config.workspace = true
core_lib.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
