[package]
license = "MIT OR Apache-2.0"
name = "core_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
config.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
dirs = "6.0.0"
